# simmeth

./: .gitignore  CHANGELOG.md  README.md  environment.yml  main.py  requirements.txt  setup.cfg
docs/nb/: main.ipynb
simmeth/: environment.py  simulation.py
simmeth/environment/: environment.py
simmeth/simulation/: simulation.py
src/simmeth/agent/: belief.py
src/simmeth/environment/: environment.py
src/simmeth/simulation/: simulation.py
tests/: test_main.py
