# https://packaging.python.org/en/latest/tutorials/packaging-projects/
# Build: python -m build
# Upload to TestPyPi: twine upload --repository testpypi dist/*


[metadata]
name = simmeth
version = 0.0.3
author = Markus Lill
author_email = ml.ecm.ec@som.lmu.de
description = Simulation Methods Package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LMU-MBR/simmeth
project_urls =
    Bug Tracker = https://github.com/LMU-MBR/simmeth/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = simmeth
packages = find:
python_requires = >=3.6

[options.packages.find]
where = simmeth
